# mcp-vision

./: .gitignore  Dockerfile  mcp_vision.py  pyproject.toml
groundingdino/: pyproject.toml  requirements.txt
groundingdino/src/groundingdino/: __init__.py  gd_utils.py
groundingdino/src/groundingdino/util/: inference.py
src/: __init__.py
src/groundingdino/: README.md  gd_utils.py  requirements.txt
src/mcp_vision/: gd_utils.py  server.py
src/mcp_vision/groundingdino/util/: inference.py
