[project]
name = "mcp-vision"
version = "0.1.0"
description = "Allow LLMs to call dedicated specialist CV models"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Groundlight AI" }]
license = { text = "MIT License" }
dependencies = [
    "addict>=2.4.0",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
    "pycocotools>=2.0.8",
    "scipy>=1.15.2",
    "supervision==0.3.2",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "yapf>=0.43.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.7.3", "pytest>=8.0.0"]

[project.scripts]
mcp-vision = "src:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["ruff>=0.7.3", "pytest>=8.0.0"]

[tool.uv.sources]
groundingdino = [{ path = "./src/groundingdino", editable = true }]
mcp_vision = [{ path = "./src/mcp_vision", editable = true }]
